--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -24,3 +24,15 @@ $enable-rtl: true;
 
 // If you want to add something do it here
 @import "custom";
+.overlay-spinner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
