--- a/src/app/authentication/components/log-in/log-in.component.html
+++ b/src/app/authentication/components/log-in/log-in.component.html
@@ -1,6 +1,8 @@
 <div class="overlay-spinner" *ngIf="(isLoading$ | async)">
   <c-spinner></c-spinner>
 </div>
+<app-toaster></app-toaster>
+
 <div class="bg-light min-vh-100 d-flex flex-row align-items-center">
   <c-container>
     <c-row class="justify-content-center">
@@ -75,6 +77,7 @@
                 </c-input-group>
                 <c-row>
                   <c-col xs="6">
+
                     <button cButton class="px-4" color="primary" type="submit">Login</button>
                   </c-col>
                   <c-col class="text-right" xs="6">
@@ -92,9 +95,14 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                   tempor incididunt ut labore et dolore magna aliqua.
                 </p>
-                <button [active]="true" cButton class="mt-3" color="primary" routerLink="/register">
+                <button [active]="true" cButton class="mt-3" color="primary" routerLink="/sing-up">
                   Register Now!
                 </button>
+                <button cButton (click)="testToaser()"  class="mt-3" color="primary" >
+                 Test
+                </button>
+
+
               </div>
             </c-card-body>
           </c-card>
