--- a/src/app/authentication/components/log-in/log-in.component.html
+++ b/src/app/authentication/components/log-in/log-in.component.html
@@ -1,7 +1,6 @@
 <div class="overlay-spinner" *ngIf="(isLoading$ | async)">
   <c-spinner></c-spinner>
 </div>
-<app-toaster></app-toaster>
 
 <div class="bg-light min-vh-100 d-flex flex-row align-items-center">
   <c-container>
@@ -77,7 +76,6 @@
                 </c-input-group>
                 <c-row>
                   <c-col xs="6">
-
                     <button cButton class="px-4" color="primary" type="submit">Login</button>
                   </c-col>
                   <c-col class="text-right" xs="6">
@@ -87,7 +85,7 @@
               </form>
             </c-card-body>
           </c-card>
-          <c-card [ngStyle]="{'width.%': 44}" class="text-white bg-primary py-5">
+          <c-card  class="text-white bg-primary py-5">
             <c-card-body class="text-center">
               <div>
                 <h2>Sign up</h2>
@@ -95,14 +93,9 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                   tempor incididunt ut labore et dolore magna aliqua.
                 </p>
-                <button [active]="true" cButton class="mt-3" color="primary" routerLink="/sing-up">
+                <button [active]="true" cButton class="mt-3" color="primary" routerLink="/singup">
                   Register Now!
                 </button>
-                <button cButton (click)="testToaser()"  class="mt-3" color="primary" >
-                 Test
-                </button>
-
-
               </div>
             </c-card-body>
           </c-card>
